--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "cheerio": "^1.0.0-rc.11",
     "node-fetch": "^3.2.4",
     "urlencode": "^1.1.0"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "webpack": "^5.72.1"
   }
 }
